# errloom

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CRUSH.md  README.md  conftest.py  pyproject.toml  storage.json
.kilocode/rules/: base.md
.persistence/: logging.json
docs/: Makefile  ROADMAP.md
errloom/: __init__.py  aliases.py  argp.py  attractor.py  attractors.py  comm.py  defaults.py  discovery.py  holoom.py  holophore.py  holoware.py  holoware_handlers.py  holoware_load.py  holoware_loom.py  holoware_parse.py  loom.py  main.py  main_deploy.py  paths.py  rollout.py  session.py  session_entry.py  ssh.py  states.py  storage.py  tapestry.py  test_holoware.py  test_holoware_old.py  test_holoware_parse_testslide.py
errloom/attractors/: __init__.py  attractor.py  bingo_attractor.py  codemath_attractor.py  fidelity_attractor.py  judge_attractor.py  math_attractor.py  multi_attractor.py  smola_tool_attractor.py  tool_attractor.py
errloom/deploy/: app.py  deploy_constants.py  deploy_utils.py  deployment_step.py  execution_state.py  remote.py  remote_manager.py  remote_view.py  vast_manager.py
errloom/examples/: arc_1d.py  doublecheck.py  gsm8k.py  math_group.py  math_python.py  reverse_text.py  self_reward.py  smola_math_tools.py  wiki_search.py  wordle.py
errloom/examples/eval/: arc_1d.py  gsm8k.py  math_group.py  math_python.py  wordle.py
errloom/gui/: ModuleWindow.py
errloom/hol/: doublecheck.hol  few_shots.py
errloom/holoware/: comm.py  holophore.py  holoware.py  holoware_handlers.py  holoware_loader.py  holoware_loom.py  holoware_parse.py
errloom/holoware-vscode/: language-configuration.json  package.json
errloom/holoware-vscode/syntaxes/: holoware.tmLanguage.json
errloom/inference/: mock_client.py
errloom/interop/: mock_client.py  providers.py  vast_instance.py  vast_manager.py  vast_offer.py  vllm_client.py  vllm_server.py
errloom/lib/: discovery.py  formatting.py  log.py  untested_error.py
errloom/looms/: __init__.py  codemath_loom.py  doublecheck_loom.py  env_loom.py  loom.py  multiturn_completion_loom.py  multiturn_loom.py  qa_loom.py  reasoninggym_loom.py  router_loom.py  smola_tool_loom.py  textarena_loom.py  tool_loom.py
errloom/parsers/: parser.py  smola_parser.py  think_parser.py  xml_parser.py
errloom/parsing/: parser.py  smola_parser.py  think_parser.py  xml_parser.py
errloom/prompts/: smola.hol  tool.hol
errloom/tools/: ask.py  smola.py
errloom/trainers/: __init__.py  async_batch_generator.py  grpo_config.py  grpo_trainer.py
errloom/training/: async_batch_generator.py  grpo.py  grpo_config.py  grpo_trainer.py  gspo.py  mlpo.py  rl_config.py  rl_trainer.py
errloom/tui/: app_button.py  base_list.py  button_list.py  instance_list.py  log_display.py  manage_layout.py  offer_list.py  remote_list.py  ui_vars.py
errloom/utils/: data_utils.py  eval_utils.py  hot_reload.py  log.py  logging_utils.py  model_utils.py  openai_chat.py  signal_block.py  watch.py
examples/: arc_1d.py  doublecheck.py  math_group.py  math_python.py  smola_math_tools.py
hol/: compressor.hol  few_shots.py
src/: RenderGlobals.py  common.py  convert.py  dbg.py  hud.py  maths.py  paths.py  renderer.py  rendervars.py
src/deploy/: deploy_utils.py  remote.py  remote_manager.py  remote_view.py  ssh.py  vast_manager.py  watch.py
src/deploy/tui/: app_button.py  base_list.py  button_list.py  draw_canvas.py  instance_list.py  log_display.py  manage_layout.py  offer_list.py  remote_list.py  spacer.py  ui_state.py  ui_vars.py
src/lib/: devices.py  imagelib.py
tests/: test_context.py  test_discovery.py  test_holoware.py  test_holoware_parse.py  test_log.py  test_loom.py  test_tapestry.py
verifiers/: __init__.py  log.py  output.py  states.py  test_holoware.py
verifiers/attractors/: __init__.py  attractor.py  codemath_attractor.py  codemath_rubric.py  judge_attractor.py  math_attractor.py  multi_attractor.py  rubric_group.py  smola_tool_attractor.py  smola_tool_rubric.py  tool_attractor.py  tool_rubric.py
verifiers/envs/: __init__.py  codemath_env.py  doublecheck_env.py  env_group.py  loom.py  multiturn_completion_env.py  multiturn_env.py  qa_env.py  singleturn_env.py  smola_tool_env.py  textarena_env.py  tool_env.py
verifiers/examples/: arc_1d.py  doublecheck.py  gsm8k.py  math_group.py  math_python.py  reverse_text.py  self_reward.py  smola_math_tools.py  wiki_search.py  wordle.py
verifiers/examples/eval/: arc_1d.py  gsm8k.py  math_group.py  math_python.py  reverse_text.py  summarize_text.py  wordle.py
verifiers/holoware/: comm.py  holophore.py  holoware.py  holoware_loader.py  holoware_loom.py  holoware_parse.py  openai_chat.py
verifiers/inference/: __init__.py  mock_client.py  vllm_client.py
verifiers/looms/: codemath_loom.py  doublecheck_loom.py  env_loom.py  loom.py  multiturn_completion_loom.py  multiturn_loom.py  qa_loom.py  reasoninggym_loom.py  smola_tool_loom.py  tool_loom.py
verifiers/parsers/: parser.py  smola_parser.py  think_parser.py  xml_parser.py
verifiers/prompts/: codemath.hol  qa.hol  smola.hol
verifiers/tools/: smola.py
verifiers/trainers/: __init__.py  async_batch_generator.py  grpo_trainer.py
