[project]
name = "Errloom"
authors = [
    {name = "Nicolas Martel"},
]
version = "0.1.1"
description = "Errloom the a Swiss Army Knife of context engineering, reinforcement learning, and loom coding with LLMs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
keywords = ["reinforcement-learning", "llm", "rl", "grpo", "prompt engineering", "verifiable-environments", "multi-turn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich",
    "prompt_toolkit",
    "torch==2.7.1",
    "requests>=2.32.3",
    "openai>=1.81.0",
    "datasets>=3.6.0",
    "testslide",
    "opensimplex",
    "opencv-python-headless",
    "msgspec",
    "asyncssh",
    "desktop_notifier",
    "aiofiles"
]

[dependency-groups]
all = [
    "liger-kernel>=0.5.10",
    "deepspeed",
    "ipykernel",
    "ipywidgets",
    "duckduckgo-search",
    "brave-search",
    "reasoning-gym",
    "smolagents>=1.15.0",
    "textarena",
    "nltk"
]

train = [ 
    "transformers",
    "vllm==0.10.0",
    "flash-attn==2.8.2",
    "accelerate",
    "peft",
    "wandb",
    "trl>=0.17.0",
]

dev = [
    "testslide",
    "twine>=6.1.0",  # For uploading to PyPI
]

[project.scripts]
main = "errloom.main:run"
errl = "errloom.main:run"
vf-vllm = "errloom.interop.vllm_server:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/holo-q/errloom"
Documentation = "https://github.com/holo-q/errloom"
Repository = "https://github.com/holo-q/errloom.git"
Issues = "https://github.com/holo-q/errloom/issues"


[tool.uv]
no-build-isolation-package = ['flash-attn']